--- a/package.json
+++ b/package.json
@@ -1,15 +1,23 @@
 {
-  "name": "lessons",
-  "version": "1.0.0",
-  "description": "",
+  "name": "media-share-server",
+  "version": "2.0.0",
+  "description": "Simple media sharing server for home network",
   "main": "media-share-server.js",
   "scripts": {
+    "start": "node media-share-server.js",
+    "dev": "nodemon media-share-server.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "author": "",
+  "author": "Federico Manzella",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.17.1",
+    "express": "^5.1.0",
     "serve-index": "^1.9.1"
+  },
+  "devDependencies": {
+    "nodemon": "^3.1.0"
+  },
+  "engines": {
+    "node": ">=18.0.0"
   }
 }
