--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,7 +8,7 @@ services:
     volumes:
       # Mount your media directory here
       # Replace ./media with the path to your actual media folder
-      - /media/nfs/HDD/Video:/media:ro
+      - ./media:/media:ro
       # For read-write access, remove :ro
       # - ./media:/media
     environment:
